[package]
name = "egui-phosphor"
description = "Phosphor icons for egui"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/amPerl/egui-phosphor"

[dependencies]
egui = { git = "https://github.com/emilk/egui/", rev = "f38515afe9c0b220c7a698566630c28d8f57b44f" }

[features]
default = ["regular"]
thin = []
light = []
regular = []
bold = []
fill = []

[dev-dependencies]
eframe = { git = "https://github.com/emilk/egui/", rev = "f38515afe9c0b220c7a698566630c28d8f57b44f" }

[[example]]
name = "multiple_variants"
required-features = ["thin", "light", "regular", "bold", "fill"]
